# yolos

./: .gitignore  CMakeLists.txt  ReadME.md  export.py  onnx_quantization.py  ort_infer.cpp  ort_infer.py  run_ort.sh  torch_infer.py  train.py  train_all.sh  trt_infer.py  trt_val.py  tune.py  tune_optuna.py  val.py
data/: coco.yaml  coco128.yaml
utils/: change_ir_version.py  common.py  end2end.py  extract_calib.py  load_checkpoint.py  prepare_calib.py  trtEngine.py  yolo2coco.py
